# proto-ddl-compiler

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
proto/: db_options.proto  example_trade.proto  kitchen_sink.proto
src/: descriptor_utils.cpp  descriptor_utils.hpp  generator.cpp  generator.hpp  ir.hpp  main.cpp  mapper.cpp  mapper.hpp  validate.cpp  validate.hpp
src/backends/: clickhouse_insert_renderer.cpp  clickhouse_insert_renderer.hpp  clickhouse_renderer.cpp  clickhouse_renderer.hpp  timescale_insert_renderer.cpp  timescale_insert_renderer.hpp  timescale_renderer.cpp  timescale_renderer.hpp
tests/: mapper_test_types.proto  test_insert_renderers.cpp  test_mapper.cpp  test_renderers.cpp  test_validate.cpp
